--- a/recipes/enchiladas.html
+++ b/recipes/enchiladas.html
@@ -7,8 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="recipes/enchiladas.html">Enchiladas</a>
-    <a href="recipes/lasagna.html">Lasagna</a>
+    <h1>Enchiladas</h1>
 </body>
 </html>
