Se agrega informacion a las vistas recetas

--- a/recipes/enchiladas.html
+++ b/recipes/enchiladas.html
@@ -8,5 +8,27 @@
 </head>
 <body>
     <h1>Enchiladas</h1>
+    <img src="../images/enchiladas.jpg" alt="Enchiladas">
+    <h2>Description</h2>
+    <p>A friend of mine gave me this recipe for ground beef enchiladas and it is delicious!
+    </p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>2 pounds lean ground beef</li>
+        <li>1 large chopped onion</li>
+        <li>⅛ teaspoon garlic salt</li>
+        <li>12 (8 inch) flour tortillas</li>
+        <li>2 teaspoons vegetable oil</li>
+        <li>8 ounces shredded Colby cheese</li>
+        <li>2 (19 ounce) cans enchilada sauce</li>
+
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Preheat oven to 350 degrees F (175 degrees C).</li>
+        <li>In a heavy saucepan or skillet, brown the ground beef and onions. Season the ground beef mixture with garlic salt and set aside.</li>
+        <li>In a skillet, fry the tortillas in vegetable oil. Spoon some meat mixture and cheese into the center of each tortilla, roll them up and arrange them in a 9x13 inch baking dish or oblong pan. Pour the enchilada sauce over the rolled enchiladas and top with any remaining meat or cheese.</li>
+        <li>Bake in the preheated 350 degrees F (175 degrees C) for 20 to 30 minutes.</li>
+    </ol>
 </body>
 </html>
